# support-operations-copilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  02-support-operations-copilot-build-plan.md  LICENSE  README.md  START_HERE_PROMPT.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/accounts/: urls.py
apps/approvals/: admin.py  forms.py  models.py  urls.py  views.py
apps/audit/: admin.py  models.py
apps/copilot/: admin.py  apps.py  models.py
apps/evaluations/: admin.py  models.py  urls.py  views.py
apps/feedback/: admin.py  forms.py  models.py  urls.py  views.py
apps/health/: urls.py  views.py
apps/inbox/: urls.py  views.py
apps/knowledge_base/: admin.py  forms.py  models.py  urls.py  views.py
apps/teams/: admin.py  models.py  permissions.py  urls.py  views.py
apps/tickets/: admin.py  forms.py  models.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  production.py
docs/: architecture.md  demo_script.md  deployment.md  evaluation.md  release-checklist.md  safety.md
docs/demo_uploads/: damaged_item_playbook.txt  privacy_requests_policy.txt  refund_policy.txt  returns_policy.txt  shipping_policy.txt
eval/datasets/: support_cases.yml
infra/docker/: Dockerfile
scripts/: verify.ps1
services/approval_rules/: approvals.py  detection.py
services/embeddings/: local.py
services/evaluations/: runner.py
services/pii_redaction/: redactor.py
templates/: base.html
workers/: classify_ticket.py  draft_reply.py  ingest_knowledge.py  run_eval.py  summarize_thread.py
(+56 files in other folders)
